--- a/trunk/Ecoordenador1.1/web/resources/relatorios/codigo-fonte/atv1.jrxml
+++ b/trunk/Ecoordenador1.1/web/resources/relatorios/codigo-fonte/atv1.jrxml
@@ -35,8 +35,8 @@ from atividade_complementar_tipo t, atividade_complementar c,
 entrada_atividade e, pessoa p
 where t.id_tipo=c.id_tipo and c.id_atividade=e.id_atividade
 
-and p.discriminador='A' and p.id=$P{id}
-
+and p.discriminador='A' and p.id=$P{id} and e.aprovado=true
+group by e.data_entrada,t.tipo_atividade,c.atividade,e.pontuacao, c.ch_horaria
 order by e.data_entrada]]>
 	</queryString>
 	<field name="data_entrada" class="java.sql.Date"/>
@@ -46,6 +46,10 @@ order by e.data_entrada]]>
 	<field name="ch_horaria" class="java.lang.Integer"/>
 	<variable name="Zebra" class="java.lang.Integer" calculation="Count">
 		<variableExpression><![CDATA["1"]]></variableExpression>
+	</variable>
+	<variable name="total" class="java.lang.Integer" resetType="Column" calculation="Sum">
+		<variableExpression><![CDATA[$F{pontuacao}]]></variableExpression>
+		<initialValueExpression><![CDATA[0]]></initialValueExpression>
 	</variable>
 	<background>
 		<band splitType="Stretch"/>
@@ -69,35 +73,35 @@ order by e.data_entrada]]>
 		<band height="50" splitType="Stretch">
 			<staticText>
 				<reportElement uuid="744b54f8-38ac-4a69-af9d-3c79552af061" x="0" y="15" width="100" height="20"/>
-				<textElement>
+				<textElement textAlignment="Center">
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Data]]></text>
 			</staticText>
 			<staticText>
 				<reportElement uuid="d87520da-f488-4917-9c9e-dda89e7be7a4" x="100" y="15" width="100" height="20"/>
-				<textElement>
+				<textElement textAlignment="Center">
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Tipo Atv.]]></text>
 			</staticText>
 			<staticText>
 				<reportElement uuid="c0eaf841-3b29-4d20-b373-a9281c57b8d6" x="200" y="15" width="100" height="20"/>
-				<textElement>
+				<textElement textAlignment="Center">
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Atividade]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="81bd531f-de29-430f-8f3f-91de7ffeaa1a" x="300" y="15" width="100" height="20"/>
-				<textElement>
+				<reportElement uuid="81bd531f-de29-430f-8f3f-91de7ffeaa1a" x="412" y="15" width="100" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Pontuação]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="1c436dd2-28e8-4e90-94c6-b24ae29c6c22" x="400" y="15" width="112" height="20"/>
-				<textElement>
+				<reportElement uuid="1c436dd2-28e8-4e90-94c6-b24ae29c6c22" x="300" y="15" width="112" height="20"/>
+				<textElement textAlignment="Center">
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Carga Horária]]></text>
@@ -111,37 +115,37 @@ order by e.data_entrada]]>
 					<printWhenExpression><![CDATA[new Boolean(new Integer(($V{Zebra}.intValue())%2).equals(new Integer("0")) )]]></printWhenExpression>
 				</reportElement>
 			</rectangle>
-			<textField>
+			<textField pattern="dd/MM/yyyy">
 				<reportElement uuid="2aa0e088-627a-4674-b968-06fe82ee1ad6" x="0" y="0" width="100" height="20"/>
-				<textElement>
+				<textElement textAlignment="Center">
 					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{data_entrada}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="58be2d17-1b79-4ae0-b7e6-446a35165f08" x="100" y="0" width="100" height="20"/>
-				<textElement>
+				<textElement textAlignment="Center">
 					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{tipo_atividade}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="205f694b-065a-4107-9067-1d9218833cf5" x="200" y="0" width="100" height="20"/>
-				<textElement>
+				<textElement textAlignment="Center">
 					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{atividade}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="bcf80641-1159-430e-bed4-c3a984b4b085" x="300" y="0" width="100" height="20"/>
-				<textElement>
+				<reportElement uuid="bcf80641-1159-430e-bed4-c3a984b4b085" x="412" y="0" width="100" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{pontuacao}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="3bf90281-24d6-42ca-bb7b-d87fbd039f24" x="400" y="0" width="112" height="20"/>
-				<textElement>
+				<reportElement uuid="3bf90281-24d6-42ca-bb7b-d87fbd039f24" x="300" y="0" width="112" height="20"/>
+				<textElement textAlignment="Center">
 					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{ch_horaria}]]></textFieldExpression>
@@ -157,14 +161,14 @@ order by e.data_entrada]]>
 				<reportElement uuid="011f8540-72f3-48ad-b81e-53f7a8bf983f" x="0" y="0" width="802" height="10" forecolor="#009933" backcolor="#009933"/>
 			</rectangle>
 			<staticText>
-				<reportElement uuid="26efd95a-31db-4cdf-8bfc-a0617c9b1608" x="168" y="13" width="466" height="20"/>
+				<reportElement uuid="26efd95a-31db-4cdf-8bfc-a0617c9b1608" x="140" y="13" width="522" height="20"/>
 				<textElement>
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Instituto Federal de Educação Ciência e Tecnologia do Tocantins]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="462fa3a7-2af4-413a-b52c-028e6ea2e22d" x="274" y="34" width="255" height="20"/>
+				<reportElement uuid="462fa3a7-2af4-413a-b52c-028e6ea2e22d" x="261" y="34" width="280" height="20"/>
 				<textElement>
 					<font size="12"/>
 				</textElement>
@@ -173,6 +177,21 @@ order by e.data_entrada]]>
 		</band>
 	</pageFooter>
 	<summary>
-		<band height="42" splitType="Stretch"/>
+		<band height="42" splitType="Stretch">
+			<textField>
+				<reportElement uuid="e7a3f84a-85c7-4a38-9922-b4bec84c7cd9" positionType="Float" x="454" y="0" width="100" height="20"/>
+				<textElement verticalAlignment="Middle">
+					<font size="12" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$V{total}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement uuid="01a08405-c06b-4680-9112-c18653059517" x="326" y="0" width="125" height="20"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Pontuação Total:]]></text>
+			</staticText>
+		</band>
 	</summary>
 </jasperReport>
